[package]
name = "bufrd"
version = "0.0.1"
authors = ["@bufrsh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version="0.10.30", features=["vendored"] }
chrono = "0.4.13"
reqwest = { version="0.10", features=["blocking"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
